ipa-macros/tests/derive_gate/not_struct.rs
use ipa_macros::Gate;

// derive Gate supports struct only
#[derive(Gate)]
enum MyGate {}

fn main() {}
